# 83b-calculator

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
83b_calculator/: calculator.py  lot.py  main.py  portfolio_report.py
83b_calculator/events/: capital_gains_tax_event.py  income_tax_event.py  tax_event.py  vesting_event.py
83b_calculator/execute/: simulate.py
83b_calculator/reports/: income_tax.py  income_tax_event.py  lot.py  portfolio.py  vesting.py
83b_calculator/state/: lot.py  portfolio.py
myenv/: pyvenv.cfg
src/: main.py
src/domain/: lot.py  portfolio_event.py  purchase.py  scenario.py  scenario_result.py  tax_event.py
src/events/: employment_event.py  portfolio_event.py  share_event.py  tax_event.py
src/execute/: analytics.py  case_result.py  no_83b.py  scenario.py  scenario_runner.py  shared.py  simulate.py  yes_83b.py
src/execute/cases/: no_83b.py  yes_83b.py
src/state/: portfolio.py
tests/: test_analytics.py  test_get_portfolio_events.py  test_simulate.py
tests/test_domain/: test_capital_gains.py  test_purchase.py
tests/test_events/: test_tax_event.py
tests/test_irs_rev_proc_2012_29_examples/: conftest.py  test_example_1.py  test_example_2.py  test_example_3.py  test_example_4.py  test_example_5.py  test_example_6.py  test_get_portfolio_events.py
tests/worked_examples/cooley/: test_file_83b_and_forgo_83b.py  test_file_83b_and_forgo_83b_3yr.py  test_file_83b_and_forgo_83b_6y.py
tests/worked_examples/irs_rev_proc_2012_29_examples/: conftest.py  (+6 more)
(+2 files in other folders)
