[tool.poetry]
name = "83b-calculator"
version = "0.1.0"
description = ""
authors = ["Brent Sullivan <brntsllvn@gmail.com>"]
readme = "README.md"
packages = [{include = "83b_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
