[tool.poetry]
name = "83b-calculator"
version = "0.1.0"
description = ""
authors = ["Brent Sullivan <brntsllvn@gmail.com>"]
readme = "README.md"
packages = [{include = "83b_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
numpy-financial = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
